[project]
name = "bms-thermal-tactician"
version = "0.1.0"
description = "Industrial IoT SRE environment for battery thermal auditing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "watchfiles"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"